--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git_Assessment</title>
+    <title>Git Terminal Assessment</title>
 </head>
 <body>
-    <h1>adding text for assessment</h1>
+    <h4>adding text for assessment
+    </h4>
+    <h1>I THINK I GOT IT THIS TIME</h1>
 </body>
 </html>
